--- a/src/main/webapp/VIEW/updateDov.xhtml
+++ b/src/main/webapp/VIEW/updateDov.xhtml
@@ -9,17 +9,18 @@
       xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/WEB-INF/TEMPLATES/OverallTemplate.xhtml">
     <ui:define name="title">
-        <h:outputText value="#{I18N['dovPage.addDovTitle']}"/>
+        <h:outputText value="#{I18N['application.update.dov']}"/>
     </ui:define>
     <ui:define name="content">
         <div class="content">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['dovPage.addDovTitle']}" />
+                    <h:outputText value="#{I18N['application.update.dov']}" />
                 </h2>
                 <h:form id="updateDov">
                     <p:outputPanel class="form-control">
-                        <span class="field col-12 md:col-4 p-20-0">
+                        <h:panelGroup rendered="#{eventBean.findNumberOfEventsDov()}">
+                            <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="input_status_visit" value="#{I18N['dovPage.status']}"/>
                             <p:selectOneButton id="input_status_visit"
                                                value="#{dovBean.dov.visitYn}"
@@ -35,26 +36,29 @@
 
                         </span>
 
-                        <h:panelGroup  id="dov_Nd" class="field col-12 md:col-4 p-20-0" rendered="#{!dovBean.dov.visitYn}">
-                            <h:panelGroup class="field col-12 md:col-4 p-20-0">
-                                <p:outputLabel for="input_visit_nd" value="#{I18N['dovPage.visitNd']}"/>
-                                <p:inputTextarea  rows="6" cols="33" id="input_visit_nd" class="label" value="#{dovBean.dov.visitNd}"
-                                                  placeholder="#{I18N['dovPage.visitNd.placeholder']}"
-                                                  disabled="#{connectionBean.user.roleByIdRole.roleLabel != 'SITE' or !dovBean.dov.eventByIdEvent.available}"/>
+                            <h:panelGroup  id="dov_Nd" class="field col-12 md:col-4 p-20-0" rendered="#{!dovBean.dov.visitYn}">
+                                <h:panelGroup class="field col-12 md:col-4 p-20-0">
+                                    <p:outputLabel for="input_visit_nd" value="#{I18N['dovPage.visitNd']}"/>
+                                    <p:inputTextarea  rows="6" cols="33" id="input_visit_nd" class="label" value="#{dovBean.dov.visitNd}"
+                                                      placeholder="#{I18N['dovPage.visitNd.placeholder']}"
+                                                      disabled="#{connectionBean.user.roleByIdRole.roleLabel != 'SITE' or !dovBean.dov.eventByIdEvent.available}">
+                                        <p:ajax event="blur" process="@this" update="@all" listener="#{dovBean.testInputVsNd()}"/>
+                                    </p:inputTextarea>
+                                </h:panelGroup>
                             </h:panelGroup>
+                            <div class="ui-message ui-message-error ui-widget ui-corner-all #{dovBean.messageErrorVisitNd}">
+                                <div><span class="ui-message-error-icon"> </span>
+                                    <span class="ui-message-error-detail"><h:outputText
+                                            value="#{I18N['messageErrorVisitNd']}"/></span>
+                                </div>
+                            </div>
+                            <div class="ui-message ui-message-error ui-widget ui-corner-all #{dovBean.messageErrorVisitNdFalse}">
+                                <div><span class="ui-message-error-icon"> </span>
+                                    <span class="ui-message-error-detail"><h:outputText
+                                            value="#{I18N['messageErrorVisitNdFalse']}"/></span>
+                                </div>
+                            </div>
                         </h:panelGroup>
-                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{dovBean.messageErrorVisitNd}">
-                            <div><span class="ui-message-error-icon"> </span>
-                                <span class="ui-message-error-detail"><h:outputText
-                                        value="#{I18N['messageErrorVisitNd']}"/></span>
-                            </div>
-                        </div>
-                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{dovBean.messageErrorVisitNdFalse}">
-                            <div><span class="ui-message-error-icon"> </span>
-                                <span class="ui-message-error-detail"><h:outputText
-                                        value="#{I18N['messageErrorVisitNdFalse']}"/></span>
-                            </div>
-                        </div>
                         <h:panelGroup class="field col-12 md:col-4" rendered="#{dovBean.dov.visitYn}">
                             <p:outputLabel for="input_AdmissionDate" value="#{I18N['dovPage.visitDate']}" />
                             <p:datePicker id="input_AdmissionDate"  value="#{dovBean.dov.visitDate}" monthNavigator="true" yearNavigator="true" yearRange="1945:2100"
@@ -113,8 +117,11 @@
                                              action="/VIEW/addQuery"/>
                         </p:outputPanel>
 
-                        <p:commandButton value="#{I18N['connectionpage.return.button']}" action="#{dovBean.cancelUpdateForm()}"
-                                         class="ui-button-secondary" id="cancelButton"/>
+                        <p:commandButton value="#{I18N['connectionpage.return.button']}"
+                                         ajax="false"
+                                         validateClient="true"
+                                         class="ui-button-secondary"
+                                         action="#{dovBean.cancelUpdateForm()}"/>
                     </span>
                 </h:form>
             </div>
