--- a/src/main/webapp/VIEW/listOfAllEventsToCodeCm.xhtml
+++ b/src/main/webapp/VIEW/listOfAllEventsToCodeCm.xhtml
@@ -9,17 +9,17 @@
       xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/WEB-INF/TEMPLATES/OverallTemplate.xhtml">
     <ui:define name="title">
-        <h:outputText value="#{I18N['eventsPage.ListOfEventsToCode']}"/>
+        <h:outputText value="#{I18N['eventsPage.ListOfEventsToCodeCm']}"/>
     </ui:define>
     <ui:define name="content">
         <div class="content card">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['eventsPage.ListOfEventsToCode']}" />
+                    <h:outputText value="#{I18N['eventsPage.ListOfEventsToCodeCm']}" />
                 </h2>
                 <h:form>
                     <f:metadata>
-                        <f:event type="preRenderView" listener="#{eventBean.researchFilterAllEventsNotCoded()}"/>
+                        <f:event type="preRenderView" listener="#{eventBean.researchFilterAllEventsNotCodedCm()}"/>
                     </f:metadata>
                     <p:dataTable var="r" value="#{eventBean.entityFiltered}"
                                  resizableColumns="true"
@@ -52,24 +52,6 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">#{I18N['action']}</f:facet>
-                            <h:commandButton class="btn btn-dark" value="#{I18N['dov.modify']}" action="#{dovBean.findEvent(r.idEvent)}" rendered="#{r.formByIdForm.formNum == 10 and connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL' and r.available}">
-                                <f:setPropertyActionListener target="#{eventBean.event}" value="#{r}"/>
-                            </h:commandButton>
-                            <h:commandLink class="btn btn-dark" value="#{I18N['ic.modify']}" action="#{icBean.findEvent(r.idEvent)}" rendered="#{r.formByIdForm.formNum == 20 and connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL' and r.available}">
-                                <f:setPropertyActionListener target="#{eventBean.event}" value="#{r}"/>
-                            </h:commandLink>
-                            <h:commandLink class="btn btn-dark" value="#{I18N['dm.modify']}" action="#{dmBean.findEvent(r.idEvent)}" rendered="#{r.formByIdForm.formNum == 30 and connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL' and r.available}">
-                                <f:setPropertyActionListener target="#{eventBean.event}" value="#{r}"/>
-                            </h:commandLink>
-                            <h:commandLink class="btn btn-dark" value="#{I18N['vs.modify']}" action="#{dmBean.findEvent(r.idEvent)}" rendered="#{r.formByIdForm.formNum == 40 and connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL' and r.available}">
-                                <f:setPropertyActionListener target="#{eventBean.event}" value="#{r}"/>
-                            </h:commandLink>
-                            <h:commandLink class="btn btn-dark" value="#{I18N['te.modify']}" action="#{teBean.findEvent(r.idEvent)}" rendered="#{r.formByIdForm.formNum == 50 and connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL' and r.available}">
-                                <f:setPropertyActionListener target="#{eventBean.event}" value="#{r}"/>
-                            </h:commandLink>
-                            <h:commandLink class="btn btn-dark" value="#{I18N['ae.modify']}" action="#{aeBean.findEvent(r.idEvent)}" rendered="#{r.formByIdForm.formNum == 80 and connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL' and r.available}">
-                                <f:setPropertyActionListener target="#{eventBean.event}" value="#{r}"/>
-                            </h:commandLink>
                             <h:commandLink class="btn btn-dark" value="#{I18N['cm.modify']}" action="#{cmBean.findEvent(r.idEvent)}" rendered="#{r.formByIdForm.formNum == 90 and connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL' and r.available}">
                                 <f:setPropertyActionListener target="#{eventBean.event}" value="#{r}"/>
                             </h:commandLink>
