--- a/src/main/webapp/VIEW/updateCm.xhtml
+++ b/src/main/webapp/VIEW/updateCm.xhtml
@@ -298,7 +298,7 @@
                         </p:outputPanel>
 
                         <p:outputPanel rendered="#{eventBean.event.available and (connectionBean.user.roleByIdRole.roleLabel == 'CRA' or connectionBean.user.roleByIdRole.roleLabel == 'DATA MANAGER' or connectionBean.user.roleByIdRole.roleLabel == 'MEDICAL' or connectionBean.user.roleByIdRole.roleLabel == 'SAFETY')}">
-                            <p:commandButton value="#{I18N['application.ae.query']}"
+                            <p:commandButton value="#{I18N['application.cm.query']}"
                                              ajax="false"
                                              validateClient="true"
                                              class="ui-button-success"
