QueryService + VS (I18N, addVs et VsBean)

--- a/src/main/webapp/VIEW/addVs.xhtml
+++ b/src/main/webapp/VIEW/addVs.xhtml
@@ -99,7 +99,7 @@
                                 <div class="ui-message ui-message-error ui-widget ui-corner-all #{vsBean.messageErrorHeightNull}">
                                     <div><span class="ui-message-error-icon"> </span>
                                         <span class="ui-message-error-detail"><h:outputText
-                                                value="#{I18N['messageErrorHeightNull']}"/></span>
+                                                value="#{I18N['vsPage.height.errorMessage']}"/></span>
                                     </div>
                                 </div>
                                 <div class="ui-message ui-message-error ui-widget ui-corner-all #{vsBean.messageErrorHeightCm}">
@@ -187,7 +187,7 @@
                             <div class="ui-message ui-message-error ui-widget ui-corner-all #{vsBean.messageErrorWeightNull}">
                                 <div><span class="ui-message-error-icon"> </span>
                                     <span class="ui-message-error-detail"><h:outputText
-                                            value="#{I18N['messageErrorWeighNull']}"/></span>
+                                            value="#{I18N['vsPage.weight.errorMessage']}"/></span>
                                 </div>
                             </div>
                             <div class="ui-message ui-message-error ui-widget ui-corner-all #{vsBean.messageErrorWeightKg}">
@@ -263,8 +263,8 @@
                                            validatorMessage="#{I18N['vsPage.input_sbp.errorMessage']}">
                                         <p:ajax process="@this" update="@all"/>
                                         <p:ajax update="messageSbp" event="blur"/>
-                                        <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testDbpGtnSbp()}"/>
-                                        <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testSbp()}"/>
+                                        <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testDbpGtnSbp()}"/>
+                                        <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testSbp()}"/>
                                     </p:inputNumber>
                                 </span>
                                 <p:message id="messageSbp" for="@previous"/>
@@ -287,8 +287,8 @@
                                            validatorMessage="#{I18N['vsPage.input_dbp.errorMessage']}">
                                         <p:ajax process="@this" update="@all"/>
                                         <p:ajax update="messageDbp" event="blur"/>
-                                        <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testDbpGtnSbp()}"/>
-                                        <p:ajax event="blur" process="@this" update="@all" listener="#{vsBean.testDbp()}"/>
+                                        <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testDbpGtnSbp()}"/>
+                                        <p:ajax event="change" process="@this" update="@all" listener="#{vsBean.testDbp()}"/>
                                     </p:inputNumber>
                                 </span>
                                 <p:message id="messageDbp" for="@previous"/>
@@ -397,7 +397,7 @@
                                 <div class="ui-message ui-message-error ui-widget ui-corner-all #{vsBean.messageErrorTempNull}">
                                     <div><span class="ui-message-error-icon"> </span>
                                         <span class="ui-message-error-detail"><h:outputText
-                                                value="#{I18N['messageErrorTempNull']}"/></span>
+                                                value="#{I18N['vsPage.input_temp.errorMessage']}"/></span>
                                     </div>
                                 </div>
                                 <div class="ui-message ui-message-error ui-widget ui-corner-all #{vsBean.messageErrorTempC}">
