--- a/src/main/webapp/VIEW/updateCm.xhtml
+++ b/src/main/webapp/VIEW/updateCm.xhtml
@@ -9,13 +9,13 @@
       xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/WEB-INF/TEMPLATES/OverallTemplate.xhtml">
     <ui:define name="title">
-        <h:outputText value="#{I18N['cmPage.addCmTitle']}"/>
+        <h:outputText value="#{I18N['cmPage.updateCmTitle']}"/>
     </ui:define>
     <ui:define name="content">
         <div class="content">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['cmPage.addCmTitle']}" />
+                    <h:outputText value="#{I18N['cmPage.updateCmTitle']}" />
                 </h2>
                 <h:form>
                     <p:outputPanel class="form-control">
